--- a/arenabuddy/arenabuddy/assets/tailwind.css
+++ b/arenabuddy/arenabuddy/assets/tailwind.css
@@ -321,6 +321,9 @@
   .h-64 {
     height: calc(var(--spacing) * 64);
   }
+  .h-96 {
+    height: calc(var(--spacing) * 96);
+  }
   .h-full {
     height: 100%;
   }
